--- a/README
+++ b/README
@@ -103,15 +103,16 @@ SUPPORT
     For general comments, contact the author.
 
 AUTHOR
-    Adam Kennedy (Maintainer), <http://ali.as/>, cpan@ali.as
+    Adam Kennedy <adamk@cpan.org>
 
 SEE ALSO
     PPI, PPI::Normal, Perl::Signature
 
 COPYRIGHT
-    Copyright (c) 2004 - 2005 Adam Kennedy. All rights reserved. This
-    program is free software; you can redistribute it and/or modify it under
-    the same terms as Perl itself.
+    Copyright 2004 - 2008 Adam Kennedy.
+
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
     The full text of the license can be found in the LICENSE file included
     with this module.
